crates/rspyts-macros/tests/ui/required_newtype_field.stderr
error: #[bridge(required)] applies only to a direct `Option<T>` object field
 --> tests/ui/required_newtype_field.rs:4:28
  |
4 | pub struct RequiredNewtype(#[bridge(required)] pub Option<String>);
  |                            ^^^^^^^^^^^^^^^^^^^

error: expected non-macro attribute, found attribute macro `bridge`
 --> tests/ui/required_newtype_field.rs:4:30
  |
4 | pub struct RequiredNewtype(#[bridge(required)] pub Option<String>);
  |                              ^^^^^^ not a non-macro attribute
