crates/rspyts-macros/tests/ui/required_newtype_field.rs
use rspyts::bridge;

#[bridge]
pub struct RequiredNewtype(#[bridge(required)] pub Option<String>);

fn main() {}
